--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -6,7 +6,8 @@
     "verbatimModuleSyntax": true,
     "skipLibCheck": true,
     "types": [
-      "node"
+      "node",
+      "jquery"
     ],
     "jsx": "react-jsx",
     "jsxImportSource": "hono/jsx",
