--- a/backend/package.json
+++ b/backend/package.json
@@ -2,15 +2,18 @@
   "name": "backend",
   "type": "module",
   "scripts": {
-    "dev": "tsx watch src/index.ts",
+    "dev": "tsx watch src/app.ts",
     "build": "tsc",
-    "start": "node dist/index.js"
+    "start": "node dist/app.js"
   },
   "dependencies": {
     "@hono/node-server": "^1.19.5",
+    "csv-parse": "^6.1.0",
     "hono": "^4.10.2",
     "jquery": "^3.7.1",
-    "jquery-csv": "^1.0.40"
+    "jquery-csv": "^1.0.40",
+    "mongoose": "^8.19.2",
+    "vn-str": "^0.4.0"
   },
   "devDependencies": {
     "@types/jquery": "^3.5.33",
